# fawkes

./: .clang-format  .clang-tidy  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
.githooks/: pre-commit
.githooks/scripts/: clang-format-diff.py  rm-gxx-pch.py
.github/workflows/: lint.yaml  linux_build_and_test_clang.yaml  linux_build_and_test_gcc.yaml  windows_build_and_test.yml
cmake/: clang_tidy.cmake  compiler_msvc.cmake  compiler_posix.cmake  pch.cmake  sanitizer.cmake  utils.cmake
examples/: CMakeLists.txt  graceful_shutdown.cpp  ping_pong.cpp  server_with_timeout.cpp  use_io_thread_pool.cpp  use_middlewares.cpp
fawkes/: CMakeLists.txt  cookie.cpp  cookie.hpp  cookie_test.cpp  errors.hpp  io_thread_pool.cpp  io_thread_pool.hpp  io_thread_pool_test.cpp  is_asio_awaitable.hpp  is_asio_awaitable_test.cpp  middleware.hpp  mime.hpp  path_params.hpp  query_params.hpp  request.cpp  request.hpp  request_test.cpp  response.cpp  response.hpp  router.cpp  router.hpp  router_test.cpp  server.cpp  server.hpp  server_options_test.cpp  test_main.cpp  tree.cpp  tree.hpp  tree_test.cpp
fawkes/middlewares/: cors.cpp  cors.hpp  cors_test.cpp
test_utils/: CMakeLists.txt  run_awaitable_sync.cpp  run_awaitable_sync.hpp  stringification.hpp
